--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: python
 rvm:
  - "3.11"
+
+env:
+  - DJANGO_SETTINGS_MODULE="your_project.settings"
+
+install:
+- pip install -r requirements.txt
