--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: python
 python:
- - "3.10-dev"
+  - "3.10-dev"  # Use the development version of Python 3.10
+
+env:
+  - DJANGO_SETTINGS_MODULE="mysite.settings"
+
+install:
+  - pip install -r requirements.txt
+
+script:
+  - python manage.py migrate
+  - python manage.py test
