--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ deploy:
   region: "us-east-2"
   app: "swe1-app"
   env: "swe1-app-env"
-  bucket_name: "swe1-app-env.eba-akkyyi3k.us-west-2"
+  bucket_name: "elasticbeanstalk-us-west-2-891377257918"
