--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,5 @@ deploy:
   app: "swe1-app"
   env: "swe1-app-env"
   bucket_name: "elasticbeanstalk-us-west-2-891377257918"
+  on:
+    branch: main  # Deploy only from the main branch
