--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ script:
 deploy:
   provider: elasticbeanstalk
   access_key_id:
-    secure: "AKIA47CRZRW7HADV2ONM"
+    secure: ""
   secret_access_key:
-    secure: "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"
+    secure: ""
   region: "us-west-2"
   app: "swe1-app"
   env: "swe1-app-env"
