--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,8 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: ""
-  secret_access_key:
-    secure: ""
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
   region: "us-west-2"
   app: "swe1-app"
   env: "swe1-app-env"
