--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install -r requirements.txt
 
 script:
+  - black --check .
   - python manage.py migrate
   - python manage.py test
 
