--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ script:
   - flake8 .
   - python manage.py migrate
   - python manage.py test
+  - coverage run manage.py test  # Run tests with coverage
+  - coverage report  # Generate coverage report
+  after_success:
+  - coveralls
 
 
 deploy:
